# fastapi-poc

./: .gitignore  .gitlab-ci.yml  README.md  backend.dockerfile  celeryworker.dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: backend_pre_start.py  celeryworker_pre_start.py  initial_data.py  tests_pre_start.py  worker.py
app/api/: commons.py
app/api/v1/: api.py
app/api/v1/endpoints/: cupom.py  healthcheck.py  login.py  old_cupom.py  users.py  utils.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_cupom.py  crud_user.py
app/db/: base.py  db_asyncio.py  init_db.py  session.py
app/models/: __init__.py  cupom.py  user.py
app/schemas/: __init__.py  cupom.py
app/tests/: conftest.py
migrations/: env.py
migrations/versions/: d4867f3a4c0a_first_revision.py
scripts/: deploy.sh  test.sh
